[gd_scene load_steps=8 format=3 uid="uid://cxymxos12ls1g"]

[ext_resource type="Texture2D" uid="uid://bv33oixgk016g" path="res://art/playerGrey_up1.png" id="1_ey6xx"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_h13ho"]
[ext_resource type="Texture2D" uid="uid://bbcq5ruj1smfo" path="res://art/playerGrey_up2.png" id="2_k6euu"]
[ext_resource type="Texture2D" uid="uid://chcmyoacvu2pb" path="res://art/playerGrey_walk1.png" id="3_aewbg"]
[ext_resource type="Texture2D" uid="uid://bo2w03i7ktuc" path="res://art/playerGrey_walk2.png" id="4_na7ww"]

[sub_resource type="SpriteFrames" id="SpriteFrames_noiew"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ey6xx")
}, {
"duration": 1.0,
"texture": ExtResource("2_k6euu")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_aewbg")
}, {
"duration": 1.0,
"texture": ExtResource("4_na7ww")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_082j8"]
radius = 27.0
height = 68.0

[node name="Player" type="Area2D"]
script = ExtResource("1_h13ho")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_noiew")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_082j8")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="player_hit" from="." to="." method="_on_player_hit"]
